update ml contract
