# backend/internal/model/template.go
@@ -3,14 +3,18 @@ package model
 import "time"
 
 type Template struct {
-	ID        string
-	Pages     []TemplatePage
-	CreatedAt time.Time
+	ID         string
+	Pages      []TemplatePage
+	FrontCover *TemplateCover
+	BackCover  *TemplateCover
+	CreatedAt  time.Time
 }
 
 type CreateTemplateParams struct {
-	ID    string
-	Pages []TemplatePage
+	ID         string
+	Pages      []TemplatePage
+	FrontCover *TemplateCover
+	BackCover  *TemplateCover
 }
 
 type TemplatePage struct {
@@ -19,6 +23,13 @@ type TemplatePage struct {
 }
 
 type TemplateSlot struct {
-	ID      string
+	ID                  string
+	PhotoID             *string
+	RequiredOrientation *string
+}
+
+type TemplateCover struct {
+	Mode    string
 	PhotoID *string
+	Text    *string
 }
